--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,12 @@
 [submodule "poky"]
 	path = poky
-	url = https://github.com/yoctoproject/poky.git
+	url = git@github.com/yoctoproject/poky.git
 	branch = styhead
+[submodule "meta-openembedded"]
+	path = meta-openembedded
+	url = git@github.com:openembedded/meta-openembedded.git
+	branch = styhead
+[submodule "meta-raspberrypi"]
+	path = meta-raspberrypi
+	url = git@github.com:agherzan/meta-raspberrypi.git
+	branch = master
